--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 </head>
 <body>
     <header>
-        <h2>welcome</h2>
+        <h2 class="log"><a class="Welcome"href="#">Welcome</a></h2>
         <nav>
             <i class="fa fa-bars" aria-hidden="true"></i>
         </nav>
     </header>
+    <main>
     <section class="section-1"> 
         <h1 class="heading-1">Hey there. I’m Josphat</h1>
             <h2 class="heading-2">I’m a software developer</h2>
@@ -31,6 +32,7 @@
             <li><i class="fa fa-angellist" aria-hidden="true"></i></li>
         </ul>
     </section>
+</main>
 
 
 
