--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
         <h2 class="log"><a class="Welcome" href="#">Welcome</a></h2>
@@ -18,21 +21,164 @@
         </nav>
     </header>
     <main>
-    <section class="section-1"> 
-        <h1 class="heading-1">Hey there. I’m Josphat</h1>
+        <section class="section-1">
+            <h1 class="heading-1">Hey there. I’m Josphat</h1>
             <h2 class="heading-2">I’m a software developer</h2>
-                <p class="par-1"> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-            don’t hestiate to
-                </p>
-        <ul class="icons">
-            <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
-            <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
-            <li><i class="fa fa-medium" aria-hidden="true"></i></li>
-            <li><i class="fa fa-github" aria-hidden="true"></i></li>
-            <li><i class="fa fa-angellist" aria-hidden="true"></i></li>
-        </ul>
-    </section>
-</main>
+            <p class="par-1"> I can help you build a product , feature or website Look through some of my work and
+                experience! If you like what you see and have a project you need coded,
+                don’t hestiate to
+            </p>
+            <ul class="icons">
+                <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+                <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
+                <li><i class="fa fa-medium" aria-hidden="true"></i></li>
+                <li><i class="fa fa-github" aria-hidden="true"></i></li>
+                <li><i class="fa fa-angellist" aria-hidden="true"></i></li>
+            </ul>
+            <div class="down-img">
+                <img src="img/Disabled.png" class="disable" alt="disble">
+            </div>
+        </section>
+
+        <section class="work-section">
+            <div class="section-title">
+                <h2>My recent Works</h2>
+            </div>
+            <div class="green-line">
+                <img src="img/Indicator.png" alt="indicator">
+            </div>
+            <section class="project-container">
+                <ul>
+
+                    <li class="project-cards">
+                        <img src="img/Img Plaholder.png" alt="placeholder">
+                        <h4>Multi-Post Stories <br> Gain+Glory</h4>
+                        <ul class="technologies">
+                            <li>Ruby on rails</li>
+                            <li>css</li>
+                            <li>Javascript</li>
+                            <li>html</li>
+                        </ul>
+                        <div class="projectBTN">
+                            <button type="button" class="project-btn">See project</button>
+                        </div>
+                    </li>
+                    <li class="project-cards">
+                        <img src="img/Img Plaholder.png" alt="placeholder">
+                        <h4>Multi-Post Stories <br> Gain+Glory</h4>
+                        <ul class="technologies">
+                            <li>Ruby on rails</li>
+                            <li>css</li>
+                            <li>Javascript</li>
+                            <li>html</li>
+                        </ul>
+                        <div class="projectBTN">
+                            <button type="button" class="project-btn">See project</button>
+                        </div>
+                    </li>
+                    <li class="project-cards">
+                        <img src="img/Img Plaholder.png" alt="placeholder">
+                        <h4>Multi-Post Stories <br> Gain+Glory</h4>
+                        <ul class="technologies">
+                            <li>Ruby on rails</li>
+                            <li>css</li>
+                            <li>Javascript</li>
+                            <li>html</li>
+                        </ul>
+                        <div class="projectBTN">
+                            <button type="button" class="project-btn">See project</button>
+                        </div>
+                    </li>
+                    <li class="project-cards">
+                        <img src="img/Img Plaholder.png" alt="placeholder">
+                        <h4>Multi-Post Stories <br> Gain+Glory</h4>
+                        <ul class="technologies">
+                            <li>Ruby on rails</li>
+                            <li>css</li>
+                            <li>Javascript</li>
+                            <li>html</li>
+                        </ul>
+                        <div class="projectBTN">
+                            <button type="button" class="project-btn">See project</button>
+                        </div>
+                    </li>
+                    <li class="project-cards">
+                        <img src="img/Img Plaholder.png" alt="placeholder">
+                        <h4>Multi-Post Stories <br> Gain+Glory</h4>
+                        <ul class="technologies">
+                            <li>Ruby on rails</li>
+                            <li>css</li>
+                            <li>Javascript</li>
+                            <li>html</li>
+                        </ul>
+                        <div class="projectBTN">
+                            <button type="button" class="project-btn">See project</button>
+                        </div>
+                    </li>
+                    <li class="project-cards">
+                        <img src="img/Img Plaholder.png" alt="placeholder">
+                        <h4>Multi-Post Stories <br> Gain+Glory</h4>
+                        <ul class="technologies">
+                            <li>Ruby on rails</li>
+                            <li>css</li>
+                            <li>Javascript</li>
+                            <li>html</li>
+                        </ul>
+                        <div class="projectBTN">
+                            <button type="button" class="project-btn">See project</button>
+                        </div>
+                    </li>
+                </ul>
+                
+                <section class="about">
+                    <h2 class="about-me-h">About Me</h2>
+                    <p class="about-text"> I can help you build a product , feature or website Look through some of my work and experience!
+                        If you like what you see and have a project you need coded,
+                        don’t hestiate to contact me.
+                    </p>
+                
+                        <button class="get-resm" type="button">Get My Resume</button>
+                </section>
+                <section class="">
+                    <ul>
+                        <li class="tech-btn">
+                            <img src="./img/img/icon-languages.svg" alt="logo">
+                            <h2 class="lang">Languages</h2>
+                            <ul class="card-list">
+                                <li class="buttons">JavaScript</li>
+                                <li class="buttons">Ruby</li>
+                                <li class="buttons">Html</li>
+                                <li class="buttons">Css</li>
+                            </ul>
+                        </li>
+                        <li class="tech-btn">
+                            <img src="./img/img/icon-frameworks.svg" alt="logo">
+                            <h2 class="lang">Frameworks</h2>
+                            <ul class="card-list">
+                                <li class="buttons">Bootstrap</li>
+                                <li class="buttons">Ruby on rails</li>
+                                <li class="buttons">RSpec</li>
+                                <li class="buttons">Capybara</li>
+                                <li class="buttons">Selenium</li>
+                            </ul>
+                        </li>
+                        <li class="tech-btn">
+                            <img src="./img/img/icon-skills.svg" alt="logo">
+                            <h2 class="lang">Skills</h2>
+                            <ul class="card-list">
+                                <li class="buttons">Codekit</li>
+                                <li class="buttons">GitHub</li>
+                                <li class="buttons">Codepen</li>
+                                <li class="buttons">Gitlab</li>
+                                <li class="buttons">Terminal</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </section>
+            </section>
+        </section>
+
+    </main>
 
 
 
@@ -40,4 +186,5 @@
 
     <script src="https://use.fontawesome.com/84bcd6cf83.js"></script>
 </body>
+
 </html>
