--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <ul>
 
                     <li class="project-cards">
-                        <img src="img/Img Plaholder.png" alt="placeholder">
+                        <img src="img/Img_Plaholder.png" alt="background">
                         <h4>Multi-Post Stories <br> Gain+Glory</h4>
                         <ul class="technologies">
                             <li>Ruby on rails</li>
@@ -64,7 +64,7 @@
                         </div>
                     </li>
                     <li class="project-cards">
-                        <img src="img/Img Plaholder.png" alt="placeholder">
+                        <img src="img/Img_Plaholder.png" alt="background">
                         <h4>Multi-Post Stories <br> Gain+Glory</h4>
                         <ul class="technologies">
                             <li>Ruby on rails</li>
@@ -77,7 +77,7 @@
                         </div>
                     </li>
                     <li class="project-cards">
-                        <img src="img/Img Plaholder.png" alt="placeholder">
+                        <img src="img/Img_Plaholder.png" alt="placeholder">
                         <h4>Multi-Post Stories <br> Gain+Glory</h4>
                         <ul class="technologies">
                             <li>Ruby on rails</li>
@@ -90,7 +90,7 @@
                         </div>
                     </li>
                     <li class="project-cards">
-                        <img src="img/Img Plaholder.png" alt="placeholder">
+                        <img src="img/Img_Plaholder.png" alt="placeholder">
                         <h4>Multi-Post Stories <br> Gain+Glory</h4>
                         <ul class="technologies">
                             <li>Ruby on rails</li>
@@ -103,7 +103,7 @@
                         </div>
                     </li>
                     <li class="project-cards">
-                        <img src="img/Img Plaholder.png" alt="placeholder">
+                        <img src="img/Img_Plaholder.png" alt="placeholder">
                         <h4>Multi-Post Stories <br> Gain+Glory</h4>
                         <ul class="technologies">
                             <li>Ruby on rails</li>
@@ -116,7 +116,7 @@
                         </div>
                     </li>
                     <li class="project-cards">
-                        <img src="img/Img Plaholder.png" alt="placeholder">
+                        <img src="img/Img_Plaholder.png" alt="placeholder">
                         <h4>Multi-Post Stories <br> Gain+Glory</h4>
                         <ul class="technologies">
                             <li>Ruby on rails</li>
