Edit css and html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h2>My recent Works</h2>
             </div>
             <div class="green-line">
-                <img src="img/Indicator.png" alt="indicator">
+                <br>
             </div>
             <section class="project-container">
                 <ul>
@@ -136,10 +136,11 @@
                         If you like what you see and have a project you need coded,
                         don’t hestiate to contact me.
                     </p>
-                
-                        <button class="get-resm" type="button">Get My Resume</button>
+                <div>
+                 <button class="get-resm" type="button">Get My Resume</button>
+                 </div>
                 </section>
-                <section class="">
+                <section class="tech">
                     <ul>
                         <li class="tech-btn">
                             <img src="./img/img/icon-languages.svg" alt="logo">
@@ -177,14 +178,7 @@
                 </section>
             </section>
         </section>
-
     </main>
-
-
-
-
-
     <script src="https://use.fontawesome.com/84bcd6cf83.js"></script>
 </body>
-
 </html>
