first intial a branch

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <section class="work-section">
             <div class="section-title">
-                <h2>My recent Works</h2>
+                <h2>My Recent Works</h2>
             </div>
             <div class="green-line">
                 <br>
@@ -179,6 +179,6 @@
             </section>
         </section>
     </main>
-    <script src="https://use.fontawesome.com/84bcd6cf83.js"></script>
+    <script src="https://use.fontawesome.com/84bcd6cf83.js"></script>  
 </body>
 </html>
