--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <i class="fa fa-bars" aria-hidden="true"></i>
         </nav>
     </header>
-</main>
+<main>
         <section class="section-1">
             <h1 class="heading-1">Hey there. I’m Josphat</h1>
             <h2 class="heading-2">I’m a software developer</h2>
@@ -203,3 +203,4 @@
                     <div>
                         <button class="green-btn font-f" id="submit-btn" type="submit">Get in touch</button>
                     </div>
+</main> 
