--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <i class="fa fa-bars" aria-hidden="true"></i>
         </nav>
     </header>
-<main>
+    <main>
         <section class="section-1">
             <h1 class="heading-1">Hey there. I’m Josphat</h1>
             <h2 class="heading-2">I’m a software developer</h2>
@@ -179,13 +179,13 @@
                 </section>
             </section>
         </section>
-        <footer class="footer" id="contact-me"></footer>
-            <div class="form form-background"></div>
+        <footer class="footer" id="contact-me">
+            <div class="form form-background">
                 <h2 class="introduction-text common font-f contact-header">I'm always interested in hearing about
                     new projects, so if you'd like to chat please get in touch.
                 </h2>
 
-                <form action="https://formspree.io/f/xzbygvjd" name="contact-form" method="POST" id="form"></form>
+                <form action="https://formspree.io/f/xzbygvjd" name="contact-form" method="POST" id="form">
                     <label for="fname">Full name:</label>
                     <input id="fname" type="text" maxlength="30" name="fullName" placeholder="Full name" required
                         class="input">
@@ -203,4 +203,26 @@
                     <div>
                         <button class="green-btn font-f" id="submit-btn" type="submit">Get in touch</button>
                     </div>
-</main> 
+
+                </form>
+            </div>
+        </footer>
+        <div class="footer-line">
+            <ul class="icons">
+                <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+                <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
+                <li><i class="fa fa-medium" aria-hidden="true"></i></li>
+                <li><i class="fa fa-github" aria-hidden="true"></i></li>
+                <li><i class="fa fa-angellist" aria-hidden="true"></i></li>
+            </ul>
+            <p class="my-email">myemailhere@email.com</p>
+        </div>
+
+        <script src="main.js"></script>
+
+    </main>
+    <script src="https://use.fontawesome.com/84bcd6cf83.js"></script>
+
+</body>
+
+</html>
