--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
 </head>
 
 <body>
-    <header>
+    <header id="Portfolio">
         <h2 class="log"><a class="Welcome" href="#">Welcome</a></h2>
-        <nav>
-            <i class="fa fa-bars" aria-hidden="true"></i>
+        <nav class="navbar-humberger">
+            <i class="fa fa-bars " aria-hidden="true"></i>
         </nav>
+        <ul class="navbar-links">
+            <li class="link"><a href="#Portfolio">Portfolio</a></li>
+            <li class="link"><a href="#About">About</a></li>
+            <li class="link"><a href="#Contact">Contact</a></li>
+        </ul>
     </header>
     <main>
         <section class="section-1">
@@ -130,7 +135,7 @@
                     </li>
                 </ul>
 
-                <section class="about">
+                <section class="about" id="About">
                     <h2 class="about-me-h">About Me</h2>
                     <p class="about-text"> I can help you build a product , feature or website Look through some of my
                         work and experience!
@@ -179,7 +184,7 @@
                 </section>
             </section>
         </section>
-        <footer class="footer" id="contact-me">
+        <footer class="footer" id="Contact">
             <div class="form form-background">
                 <h2 class="introduction-text common font-f contact-header">I'm always interested in hearing about
                     new projects, so if you'd like to chat please get in touch.
