Change the email address

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <li><i class="fa fa-github" aria-hidden="true"></i></li>
                 <li><i class="fa fa-angellist" aria-hidden="true"></i></li>
             </ul>
-            <p class="my-email">myemailhere@email.com</p>
+            <p class="my-email">josphat2020@gmail.com</p>
         </div>
 
         <script src="main.js"></script>
