--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 
 <body>
-    <header id="Portfolio">
+    <header id="Portfolio" class="parent">
         <h2 class="log"><a class="Welcome" href="#">Welcome</a></h2>
         <nav class="navbar-humberger">
-            <i class="fa fa-bars " aria-hidden="true"></i>
+            <i class="menuIcon material-icons">menu</i>
         </nav>
         <ul class="navbar-links">
+            <li>
+            <i class="closeIcon material-icons d-none">close</i>
+
+            </li>
             <li class="link"><a href="#Portfolio">Portfolio</a></li>
             <li class="link"><a href="#About">About</a></li>
             <li class="link"><a href="#Contact">Contact</a></li>
@@ -227,7 +233,7 @@
 
     </main>
     <script src="https://use.fontawesome.com/84bcd6cf83.js"></script>
-
+<script src="main.js"></script>
 </body>
 
 </html>
