Add a class to closeMenu icon and style it to not display

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
             <i class="menuIcon material-icons">menu</i>
         </nav>
         <ul class="navbar-links">
-            <li>
-            <i class="closeIcon material-icons d-none">close</i>
-
-            </li>
+            <li class="close-icon"><i class="closeIcon material-icons d-none">close</i></li>
             <li class="link"><a href="#Portfolio">Portfolio</a></li>
             <li class="link"><a href="#About">About</a></li>
             <li class="link"><a href="#Contact">Contact</a></li>
@@ -60,7 +57,6 @@
             </div>
             <section class="project-container">
                 <ul class="project-container-list">
-
                     <li class="project-cards">
                         <img src="img/Img_Plaholder.png" alt="background">
                         <h4>Multi-Post Stories <br> Gain+Glory</h4>
