Create the array of the popup window

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header id="Portfolio" class="parent">
+    <header id="Portfolio" class="header">
         <h2 class="log"><a class="Welcome" href="#">Welcome</a></h2>
         <nav class="navbar-humberger">
             <i class="menuIcon material-icons">menu</i>
@@ -55,7 +55,7 @@
             <div class="green-line">
                 <br>
             </div>
-            <section class="project-container">
+            <div class="project-container">
                 <ul class="project-container-list">
                     <li class="project-cards">
                         <img src="img/Img_Plaholder.png" alt="background">
@@ -184,7 +184,7 @@
                         </li>
                     </ul>
                 </section>
-            </section>
+            </div>
         </section>
         <footer class="footer" id="Contact">
             <div class="form form-background">
