--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="project-container">
                 <ul class="project-container-list">
-                    <li class="project-cards">
+                    <!-- <li class="project-cards">
                         <img src="img/Img_Plaholder.png" alt="background">
                         <h4>Multi-Post Stories <br> Gain+Glory</h4>
                         <ul class="technologies">
@@ -134,7 +134,7 @@
                         <div class="projectBTN">
                             <button type="button" class="project-btn">See project</button>
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
 
                 <section class="about" id="About">
@@ -147,6 +147,25 @@
                     <div>
                         <button class="get-resm" type="button">Get My Resume</button>
                     </div>
+                    <div class="popup-modal bg-popup hide">
+                        <div class="popup-data">
+                              <i class="fa fa-times popup-close-btn" aria-hidden="true"></i>
+                              <div class="cont">
+                                <img class="img-block" src="img/Img/modal-popup-mobile.png" alt="#">
+                              </div>
+                              <div class="bottom-card-popup">
+                                <h3 class="card-heading-popup font-f">Keeping track of hundreds of
+                                  components</h3>
+                                <ul class="btns" id="foo">
+                                </ul>
+                                <p class="popup-text font-f"></p>
+                                <div class="popup-btn-container">
+                                  <a href="" class="popup-btn font-f see-live">See Live<span><i class="fa fa-external-link"></i></span></a>
+                                  <a href="" class="popup-btn font-f see-source">See Source<span><i class="fa fa-github"></i></span></a>
+                                </div>
+                              </div>
+                        </div>
+                      </div>
                 </section>
                 <section class="tech">
                     <ul class="tech-list">
