Update javascript and css

--- a/index.html
+++ b/index.html
@@ -56,86 +56,7 @@
                 <br>
             </div>
             <div class="project-container">
-                <ul class="project-container-list">
-                    <!-- <li class="project-cards">
-                        <img src="img/Img_Plaholder.png" alt="background">
-                        <h4>Multi-Post Stories <br> Gain+Glory</h4>
-                        <ul class="technologies">
-                            <li>Ruby on rails</li>
-                            <li>css</li>
-                            <li>Javascript</li>
-                            <li>html</li>
-                        </ul>
-                        <div class="projectBTN">
-                            <button type="button" class="project-btn">See project</button>
-                        </div>
-                    </li>
-                    <li class="project-cards">
-                        <img src="img/Img_Plaholder.png" alt="background">
-                        <h4>Multi-Post Stories <br> Gain+Glory</h4>
-                        <ul class="technologies">
-                            <li>Ruby on rails</li>
-                            <li>css</li>
-                            <li>Javascript</li>
-                            <li>html</li>
-                        </ul>
-                        <div class="projectBTN">
-                            <button type="button" class="project-btn">See project</button>
-                        </div>
-                    </li>
-                    <li class="project-cards">
-                        <img src="img/Img_Plaholder.png" alt="placeholder">
-                        <h4>Multi-Post Stories <br> Gain+Glory</h4>
-                        <ul class="technologies">
-                            <li>Ruby on rails</li>
-                            <li>css</li>
-                            <li>Javascript</li>
-                            <li>html</li>
-                        </ul>
-                        <div class="projectBTN">
-                            <button type="button" class="project-btn">See project</button>
-                        </div>
-                    </li>
-                    <li class="project-cards">
-                        <img src="img/Img_Plaholder.png" alt="placeholder">
-                        <h4>Multi-Post Stories <br> Gain+Glory</h4>
-                        <ul class="technologies">
-                            <li>Ruby on rails</li>
-                            <li>css</li>
-                            <li>Javascript</li>
-                            <li>html</li>
-                        </ul>
-                        <div class="projectBTN">
-                            <button type="button" class="project-btn">See project</button>
-                        </div>
-                    </li>
-                    <li class="project-cards">
-                        <img src="img/Img_Plaholder.png" alt="placeholder">
-                        <h4>Multi-Post Stories <br> Gain+Glory</h4>
-                        <ul class="technologies">
-                            <li>Ruby on rails</li>
-                            <li>css</li>
-                            <li>Javascript</li>
-                            <li>html</li>
-                        </ul>
-                        <div class="projectBTN">
-                            <button type="button" class="project-btn">See project</button>
-                        </div>
-                    </li>
-                    <li class="project-cards">
-                        <img src="img/Img_Plaholder.png" alt="placeholder">
-                        <h4>Multi-Post Stories <br> Gain+Glory</h4>
-                        <ul class="technologies">
-                            <li>Ruby on rails</li>
-                            <li>css</li>
-                            <li>Javascript</li>
-                            <li>html</li>
-                        </ul>
-                        <div class="projectBTN">
-                            <button type="button" class="project-btn">See project</button>
-                        </div>
-                    </li> -->
-                </ul>
+                <ul class="project-container-list"></ul>
 
                 <section class="about" id="About">
                     <h2 class="about-me-h">About Me</h2>
