--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <h2 class="introduction-text common font-f contact-header">I'm always interested in hearing about
                     new projects, so if you'd like to chat please get in touch.
                 </h2>
-
+                 <!-- Email Validation -->
                 <form action="https://formspree.io/f/xzbygvjd" name="contact-form" method="POST" id="form">
                     <label for="fname">Full name:</label>
                     <input id="fname" type="text" maxlength="30" name="fullName" placeholder="Full name" required
